--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@types/editorjs__header": "^2.6.0",
     "@types/lodash.debounce": "^4.0.7"
   }
